# peacock-asr

./: .gitignore  AGENTS.md  DECISIONS.md  EXPERIMENTS.md  README.md  TODO.md  justfile  mlflow.db  pyproject.toml  skills-lock.json
docs/research/tools/: papers_convert.py  pyproject.toml
docs/research/tools/tests/: test_papers_convert.py
projects/P002-conpco-scoring/: .env.example  .gitignore  README.md  pyproject.toml
projects/P002-conpco-scoring/code/: benchmark_reproduce_conpco.py  reproduce_conpco.py  track09_conpco_ablation.py
projects/P002-conpco-scoring/code/advanced_scorers/: README.md
projects/P002-conpco-scoring/code/p002_conpco/: __init__.py  conpco_losses.py  gopt_model.py  gopt_track09.py  settings.py
projects/P002-conpco-scoring/docs/: ABLATION_PLAN.md  CODE_OWNERSHIP.md  EVIDENCE_LEDGER.md  INDEX.md  MIGRATION.md  NEXT_PHASE_PLAN.md  PERFORMANCE_ACCELERATION_PLAYBOOK.md  PERFORMANCE_CODE_AUDIT_2026-03-05.md  README.md  RUNBOOK.md  SCORER_FAMILIES.md  manuscript.md
projects/P002-conpco-scoring/experiments/benchmarks/: README.md  baseline_dp_on.json  baseline_dp_on_10.json  no_data_parallel.json  no_data_parallel_10.json  no_dp_preconcat_ssl.json  no_dp_preconcat_ssl_10.json  no_dp_workers4_pin_10.json
projects/P002-conpco-scoring/scripts/: push_env.py
projects/P002-conpco-scoring/tests/: test_gopt_model.py  test_losses.py
projects/P003-compact-backbones/: .env.example  .gitignore  README.md  pyproject.toml
projects/P003-compact-backbones/code/: README.md  benchmark_hubert_base_local.py  build_omniasr_ctc_300m_v2_phoneme_assets.py  build_omniasr_ctc_300m_v2_phoneme_manifest.py  launch_hubert_base_local.py  launch_omni_ctc_posterior_worker.py  launch_omniasr_ctc_300m_v2_local.py  launch_omniasr_ctc_300m_v2_phoneme_local.py  launch_omniasr_ctc_300m_v2_phoneme_preflight.py  launch_omniasr_ctc_300m_v2_phoneme_train_impl.py  launch_omniasr_ctc_300m_v2_phoneme_train_local.py  launch_omniasr_ctc_300m_v2_probe.py  launch_parakeet_ctc_0_6b_local.py  launch_wav2vec2_large_eval_queue.py  launch_wav2vec2_large_local.py  start_p004_then_queue_parakeet.py  start_parakeet_then_queue_omni.py  train_phoneme_head_p003.py  trigger_post_train_scoring.py  watch_agent_log_and_launch.py  watch_sweep_and_launch.py  watch_train_and_score.py
projects/P003-compact-backbones/code/citrinet/: README.md  TODO.md
projects/P003-compact-backbones/code/citrinet_vast/: __init__.py  client.py  models.py  query.py
projects/P003-compact-backbones/code/p003_compact/: __init__.py  backend_loader.py  backend_protocol.py  bench_scoring.py  cli.py  dataset.py  gop.py  gopt_model.py  k2_scalar.py  omni_assets.py  pod.py  score_variants.py  settings.py  train_profile.py
projects/P003-compact-backbones/code/training/: benchmark_phoneme_head.py  preprocess_features.py  train_phoneme_head.py
projects/P003-compact-backbones/docs/: ABLATION_PLAN.md  CITRINET_WORKSTREAM.md  EVIDENCE_LEDGER.md  EXECUTION_STATUS.md  OMNIASR_WORKSTREAM.md  README.md  RUNBOOK.md  manuscript.md  refs.bib
projects/P003-compact-backbones/env/: README.md
projects/P003-compact-backbones/env/citrinet/: README.md
projects/P003-compact-backbones/experiments/benchmarks/: README.md  hubert-base-benchmark-cpu.json  hubert_base_cpu_gc_off.json  hubert_base_cpu_gc_on.json  hubert_base_gpu_compile_no_gc_smoke.json  hubert_base_gpu_no_gc_smoke.json  hubert_base_gpu_no_gc_workers0_b2.json  hubert_base_gpu_no_gc_workers4.json  hubert_base_gpu_smoke.json
projects/P003-compact-backbones/experiments/citrinet/: README.md
projects/P003-compact-backbones/papers/: README.md
projects/P003-compact-backbones/scripts/: push_env.py
projects/P003-compact-backbones/tests/: test_backend_loader.py  test_gop.py  test_omni_assets.py  test_prepared_bundle.py  test_train_profile.py
projects/P004-training-from-scratch/: .env.example  .gitignore  README.md  pyproject.toml
projects/P004-training-from-scratch/code/: build_librispeech_phone_cuts.py  merge_cut_manifests.py  prepare_lang_phone.py  rewrite_manifest_audio_prefix.py  run_conformer_phone_ctc.py  validate_reference_setup.py
projects/P004-training-from-scratch/docs/: ABLATION_PLAN.md  EVIDENCE_LEDGER.md  README.md
projects/P004-training-from-scratch/experiments/control_plane/: vast_templates.json
projects/P004-training-from-scratch/experiments/validation/: canonical_local_c2_structured_b1_20260306_a_contract.json  canonical_local_machine_manifest.json  canonical_local_preflight.json  machine_manifest.json  r1_smoke_vast_20260307_machine_manifest.json  r1_smoke_vast_4090_20260306_191106_contract.json  r1_smoke_vast_4090_20260306_191106_machine_manifest.json  r2_reference_runpod_a5000_20260306_202527_contract.json  r2_reference_runpod_a5000_20260306_202527_machine_manifest.json  r2_smoke_audio_files.txt  reference_checks.json  reference_checks_reference_setup.json  reference_setup.json
projects/P004-training-from-scratch/resources/: arpabet_vocab.json
projects/P004-training-from-scratch/scripts/: launch_runpod_trainclean360.sh  prepare_runpod_full_librispeech.sh  runpod_prepare_librispeech_from_hf.sh  watch_build_and_launch_train_clean_360_remote.sh  watch_runpod_full_prep_and_launch_train960.sh  watch_runpod_train_and_prepare_full_librispeech.sh  watch_runpod_trainclean360_launch.sh
projects/P004-training-from-scratch/src/p004_training_from_scratch/: __init__.py  machine_manifest.py  reference_checks.py  settings.py  tracking.py
projects/P004-training-from-scratch/tests/: test_canonical_benchmark.py  test_canonical_common.py  test_canonical_data.py  test_canonical_preflight.py  test_canonical_train_smoke.py  test_canonical_trainer.py  test_machine_manifest.py  test_nightly_attention_benchmark.py  test_reference_checks.py  test_runpod_client.py  test_settings.py  test_vast_client.py  test_vast_query.py  test_vast_templates.py
references/ADVANCED-transcription/audio-alignment/: README.md  index.html  pyproject.toml  server.py
references/ADVANCED-transcription/audio-alignment/test_omni/: pyproject.toml  test_omni_aligner.py
(+1425 files in other folders)
