[project]
name = "gopt-bench"
version = "0.1.0"
description = "Pronunciation assessment benchmark: swap phoneme models, compute GOP-SF, evaluate against SpeechOcean762"
authors = [
    { name = "Chi", email = "cheez2012@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=4.0",
    "soundfile>=0.12",
    "numpy>=2.0",
    "scipy>=1.14",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.6",
    "torchcodec>=0.10",
    "protobuf>=6.33.5",
    "phonemizer>=3.3.0",
    "huggingface-hub>=1.4.1",
    "onnxruntime>=1.24.2",
    "lhotse>=1.32.2",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
zipa = ["onnxruntime>=1.18"]

[project.scripts]
gopt-bench = "gopt_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

# --------------------------------------------------------------------------- #
#  Ruff
# --------------------------------------------------------------------------- #

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "RET",    # flake8-return
    "TID",    # flake8-tidy-imports
    "TC",     # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "S",      # flake8-bandit
    "A",      # flake8-builtins
    "N",      # pep8-naming
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "ARG",    # flake8-unused-arguments
    "PERF",   # perflint
    "RUF",    # ruff-specific
    "FURB",   # refurb
    "PL",     # pylint subset
    "ERA",    # eradicate
    "FLY",    # flynt
    "PIE",    # flake8-pie
    "RSE",    # flake8-raise
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TD",     # flake8-todos
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "FBT",    # flake8-boolean-trap
    "EM",     # flake8-errmsg
    "TRY",    # tryceratops
    "BLE",    # flake8-blind-except
    "DTZ",    # flake8-datetimez
    "NPY",    # numpy-specific
]
ignore = [
    "ISC001", # conflicts with ruff formatter
    "S101",   # assert used
    "TRY003", # long exception messages
    "EM101",  # string literal in exception
    "EM102",  # f-string in exception
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "FBT",
    "PLR2004",
    "SLF001",
    "T20",
    "TC",
]

[tool.ruff.lint.isort]
known-first-party = ["gopt_bench"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# --------------------------------------------------------------------------- #
#  ty
# --------------------------------------------------------------------------- #

[tool.ty]

[tool.ty.rules]
possibly-unresolved-reference = "error"
deprecated = "error"
ambiguous-protocol-member = "error"
ineffective-final = "error"
invalid-ignore-comment = "error"
ignore-comment-unknown-rule = "error"
invalid-legacy-positional-parameter = "error"
division-by-zero = "warn"

[tool.ty.environment]
python-version = "3.13"

# --------------------------------------------------------------------------- #
#  pytest
# --------------------------------------------------------------------------- #

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = ["error"]
