[project]
name = "peacock-research-tools"
version = "0.1.0"
description = "Standalone research utilities for paper ingestion and document cleanup"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["papers_convert.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--strict-markers", "--strict-config", "-ra"]
