[project]
name = "modal-whisper-server"
version = "0.1.0"
description = "Modal deployment for faster-whisper transcription servers"
requires-python = ">=3.10"
dependencies = [
    "modal>=0.64.0",
    "openai>=1.0.0",
    "mutagen>=1.47.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = []
