[project]
name = "word-confidence-comparison"
version = "0.1.0"
description = "Compare transcription APIs with word-level confidence highlighting"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "assemblyai>=0.30.0",
    "python-dotenv",
    "httpx",
]
